<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_dark"
    tools:ignore="RtlHardcoded"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:textSize="35sp"
            app:expandedTitleMarginBottom="95dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?colorPrimary">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:contentDescription="@string/poster"
                tools:src="@drawable/poster_arrow"
                tools:ignore="ContentDescription"/>
                
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_shadow"
                android:contentDescription="@string/poster"
                tools:ignore="ContentDescription" />
            
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:scrollbars="none"
        app:behavior_overlapTop="78dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:contentPaddingBottom="16dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:maxLines="2"
                        android:padding="5dp"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:text="@string/title"/>

                    <TextView
                        android:id="@+id/tv_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_title"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        tools:text="@string/genre" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_genre"
                        android:layout_marginTop="10dp"
                        android:paddingVertical="2dp"
                        android:textColor="@color/yellow"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="@string/genre" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="?attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_genre"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="15dp"
                        android:layout_toEndOf="@id/rating"
                        android:clickable="false"
                        android:isIndicator="true"
                        android:progressTint="@color/yellow"
                        android:secondaryProgressTint="#00000000"
                        android:stepSize="0.05"
                        tools:numStars="5"
                        tools:rating="3" />

                    <TextView
                        android:id="@+id/tv_release"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_genre"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_toLeftOf="@id/tv_duration"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        tools:text="@string/release" />

                    <TextView
                        android:id="@+id/tv_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_genre"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="15dp"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        app:drawableStartCompat="@drawable/ic_circle"
                        tools:text="@string/duration" />

                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating"
                        android:layout_marginTop="12dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/nunito_bold"
                        android:textColor="@android:color/primary_text_dark"
                        android:text="@string/overview" />

                    <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/overview"
                        android:layout_marginTop="8dp"
                        android:textStyle="normal"
                        android:fontFamily="@font/nunito_semi_bold"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="14sp"
                        tools:text="@string/overview" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="3dp"
                        tools:contentDescription="@string/button_favorite"
                        android:src="@drawable/ic_favorite_border"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_share"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_overview"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/share"
                        android:background="@color/teal_200"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:elevation="3dp"
        android:layout_gravity="center"
        tools:visibility="visible"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>